--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="img/original-d3b62be0bb4e4228e3a8cc3c64b71d4b.webp" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + Vue + TS</title>
+    <title>Filaments du temps</title>
   </head>
   <body>
     <div id="app"></div>
